MODON MRE BPDEV/force-app/main/default/objects/CampaignMember/fields/Company_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Email Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>