MODON MRE BPDEV/force-app/main/default/objects/CampaignMember/fields/Mobile_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>