MODON MRE BPDEV/force-app/main/default/objects/CampaignMember/fields/Trade_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>